# agentauth

./: .env.example  .gitignore  A16Z_OUTREACH.md  CHANGELOG.md  Dockerfile  EXECUTIVE_SUMMARY.md  FULL_AUDIT_REPORT.md  ISSUES.md  OVERVIEW.md  PITCH_DECK.md  Procfile  README.md  YC_APPLICATION.md  agentauth-dashboard.html  dashboard.py  demo.html  landing.html  netlify.toml  pyproject.toml  railway.toml  server.py
Dark-Themed Landing Page/: README.md  index.html  package-lock.json  package.json  supabase_tables.sql  supabase_waitlist.sql  tsconfig.json
Dark-Themed Landing Page/netlify/functions/: waitlist.ts
Dark-Themed Landing Page/src/app/: App.tsx
Dark-Themed Landing Page/src/app/components/: AdminLogin.tsx  AnalyticsPanel.tsx  CheckoutModal.tsx  Dashboard.tsx  DemoStore.tsx  DeveloperPortal.tsx  Docs.tsx  FAQ.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  LaunchSection.tsx  Pricing.tsx  (+5 more)
app/: config.py  main.py
app/api/: __init__.py  admin.py  analytics.py  consents.py  dashboard.py  limits.py  payments.py  rules.py  webhooks.py
app/middleware/: api_keys.py
app/ml/: __init__.py  anomaly_detection.py  feature_store.py  fraud_model.py
app/models/: __init__.py  authorization.py  consent.py  limits.py  webhooks.py
app/schemas/: payment.py
app/services/: __init__.py  analytics.py  auth_service.py  biscuit_service.py  consent_service.py  rules_engine.py  stripe_service.py  ucan_service.py  webhooks.py
demos/: shopping_demo.py  stripe_real_payments.py  stripe_test_demo.py
frontend/: README.md  index.html  netlify.toml  package-lock.json  package.json
frontend/netlify/functions/: checkout.ts  get-stripe-transactions.ts  send-otp.ts  stripe-webhook.ts  verify-otp.ts
frontend/public/: maintenance.html
frontend/src/app/: App.tsx
frontend/src/lib/: supabase.ts
frontend/supabase/migrations/: 001_add_otp_and_security_tables.sql
pitch-deck/: AgentAuth_Executive_Summary.html  AgentAuth_Pitch_Deck.html
public/: index.html
public/assets/: index-BxjjyvmB.js  index-CPjamPyI.js  index-CkEqIEWz.css  index-DSkmSJpV.css  index-DV-miMII.js  index-e4upc-1l.js  index-lDpHKr24.js  index-y_z1SA8q.css
tests/: conftest.py  test_flow.py  test_phase3.py
(+16 files in other folders)
